# a2a-mcp-multi-agent

./: .flake  AI 로보틱스_20260519165139.md  adk_chat.py  crewai_flow.html  env.py  image_creator.py  image_editor.py  main.py  on_premise_llm_test.py  pyproject.toml  rag_main.py  rag_tutor_crew.py  start_hwana_agent.py  start_image.mcp.py  start_lina_agent.py  tdd.py  tools.py  tutor_crew.py
a2a_agent/: agent.py
cooker/: __init__.py  agent.py  prompt.py
hwana/: agent.py  prompt.py
image_editor_agent_with_mcp/: agent.py  prompt.py
image_mcp/: server.py  tools.py
lina/: __init__.py  agent.py  prompt.py
output/: curated_news.txt  edited_articles.json  global_news.json  korea_news.json
shorts_creator/: agent.py  prompt.py
shorts_creator/sub_agents/content_maker/: agent.py
shorts_creator/sub_agents/content_maker/image_maker/: agent.py
shorts_creator/sub_agents/content_maker/image_maker/image_builder/: agent.py  prompt.py  tools.py
shorts_creator/sub_agents/content_maker/image_maker/prompt_builder/: agent.py  prompt.py
shorts_creator/sub_agents/content_maker/narration_maker/: agent.py  prompt.py  tools.py
shorts_creator/sub_agents/content_planner/: agent.py  prompt.py
shorts_creator/sub_agents/video_composer/: agent.py  prompt.py  tools.py
st_agent/: agent.py  prompt.py
