[project]
name = "agent-a-to-z"
version = "0.1.0"
description = "ai agent offline class"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "crewai[tools]==0.177.0",
    "dotenv==0.9.9",
    "firecrawl-py==3.4.0",
    "langgraph==0.6.7",
    "langchain-openai==0.2.14",
    "langchain-community==0.3.29",
    "feedparser==6.0.11",
    "pytz==2025.2",
    "tiktoken==0.11.0",
    "pypdf==5.9.0",
]
