[project]
name = "agent-a-to-z"
version = "0.1.0"
description = "ai agent offline class"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "dotenv==0.9.9",
    "langgraph==0.6.7",
    "langchain-openai==0.2.14",
    "langchain-community==0.3.29",
    "tiktoken==0.11.0",
    "pypdf==5.9.0",
    "google-adk[a2a]==1.14.1",
    "a2a-sdk==0.3.26",
    "google-genai==1.38.0",
    "litellm==1.77.1",
    "openai==1.108.1",
    "chromadb==1.5.0",
    "fastmcp==3.3.1",
    "pillow==12.2.0",
]
